--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
     background-color: bisque;
-}
-body {
-    background-color: bisque;
+     font-family: Bai Jamjuree;
 }
 footer {
     background-color: black;
@@ -10,8 +8,10 @@ footer {
     bottom:0;
     position:fixed;
     width:100%;
+        height:2rem;
 }
 footer p{
     text-align: center;
     font-size: 0.6rem;
+        margin-top: 0,5rem;
 }
