--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 footer {
-    background-color: black;
+    background-color: rgb(3, 0, 0);
     color: white;
     position: fixed;
     bottom: 0;
